--- a/package.json
+++ b/package.json
@@ -2,20 +2,35 @@
   "name": "agentmpdfrb",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.1.3",
+    "buffer": "^6.0.3",
+    "github-markdown-css": "^5.1.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.2",
+    "react-bootstrap-range-slider": "^3.0.3",
     "react-dom": "^17.0.2",
+    "react-html-parser": "^2.0.2",
+    "react-router": "^6.2.2",
+    "react-router-bootstrap": "^0.26.0",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "sass": "^1.49.9",
+    "showdown": "^2.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build-p": "react-scripts build",
+    "build-d": "dotenv -e .env.development react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "watch": "fswatch -o src | xargs -n1 -I{} npm run build-d"
   },
   "eslintConfig": {
     "extends": [
@@ -30,9 +45,13 @@
       "not op_mini all"
     ],
     "development": [
-      "last 1 chrome version",
       "last 1 firefox version",
+      "last 1 chrome version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "dotenv-cli": "^5.0.0",
+    "webpack-cli": "^4.9.2"
   }
 }
