--- a/public/static/manifest.json
+++ b/public/static/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "AgentMPD-FRB",
-  "name": "AgentMPD-FRB Music Player",
+  "short_name": "React App",
+  "name": "Create React App Sample",
   "icons": [
     {
       "src": "favicon.ico",
